core/autocert: zero implementation
